Prueba de concepto para al tarea de editar profesional, faltan agregar validaciones

--- a/HospitalApp-web/src/main/webapp/index.xhtml
+++ b/HospitalApp-web/src/main/webapp/index.xhtml
@@ -31,7 +31,7 @@
             </p:submenu>
             <p:submenu label="Profesional" >
                 <p:menuitem value="Ingresar Profesional" url="#" onclick="PF('addPro').show()"/>
-                <p:menuitem value="Ver Profesionales" url="#"/>
+                <p:menuitem value="Ver Profesionales" url="#" onclick="PF('viewPro').show()"/>
             </p:submenu>                       
         </p:menubar>
         <p:dialog id='admisionPacientes' maximizable="true" header="Admision Pacientes" widgetVar="addPac" showEffect="fade" hideEffect="fade" closeOnEscape="true" 
@@ -54,6 +54,11 @@
                   minimizable="true" height="540" width="800">
             <ui:include src="AgregarProfesional.xhtml"/>
         </p:dialog>
+        <p:dialog id="ingresarProfesional" maximizable="true" header="Profesionales" widgetVar="viewPro" showEffect="fade" hideEffect="fade" closeOnEscape="true" 
+                  minimizable="true" height="540" width="800">
+            <ui:include src="VisualizarProfesional.xhtml"/>
+        </p:dialog>
+        
         <p:confirmDialog global="true" showEffect="fade" hideEffect="explode">
             <p:commandButton value="Si" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check"/>
             <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close"/>     
