--- a/HospitalApp-web/src/main/webapp/Especialidad.xhtml
+++ b/HospitalApp-web/src/main/webapp/Especialidad.xhtml
@@ -7,6 +7,7 @@
     <h:form id="especialidades">
         <p:growl id="growl" showDetail="true" />
         <p:dataTable id="listaEspecialidades" value="#{listasMB.listaEspecialidades}" var="esp"
+                     emptyMessage="No se encontraron elementos que coincidan con la búsqueda"
                      paginator="true" rows="10"
                      paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                      rowsPerPageTemplate="5,10,20">            
