--- a/HospitalApp-web/src/main/webapp/Subespecialidad.xhtml
+++ b/HospitalApp-web/src/main/webapp/Subespecialidad.xhtml
@@ -68,7 +68,7 @@
                   showEffect="clip" hideEffect="fold" >
             <h:panelGrid id="display2" columns="2" cellpadding="4">
                 <h:outputText value="Código Subespecialidad:" />
-                <h:inputText value="#{subespecialidadMB.subespecialidadId}"/>
+                <h:inputText id="codigo" value="#{subespecialidadMB.subespecialidadId}"/>
                 <h:outputText value="Nombre Subespecialidad:" />
                 <h:inputText value="#{subespecialidadMB.subespeNombre}"/>
                 <h:outputText value="Especialidad:" />
