--- a/HospitalApp-web/src/main/webapp/VisualizarPaciente.xhtml
+++ b/HospitalApp-web/src/main/webapp/VisualizarPaciente.xhtml
@@ -10,7 +10,7 @@
         <p:dataTable emptyMessage="No se encontraron elementos que coincidan con la búsqueda" id="Personas" paginator="true" paginatorAlwaysVisible="true" rows="10" paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"  
                      rowsPerPageTemplate="5,10,20"   var="paciente" value="#{buscarPaciente.personasObject}">  
             <f:facet name="header">
-                <p:outputLabel>
+                <p:outputPanel>
                     <h:panelGrid columns="3" id="panelCampo">
                         <p:outputLabel value="Buscar"></p:outputLabel>
                         <p:inputText value="#{buscarPaciente.buscado}"/>
@@ -21,7 +21,7 @@
                         <f:selectItem itemLabel="Nombre" itemValue="2" />  
                         <f:selectItem itemLabel="Apellido Paterno" itemValue="3" />  
                     </p:selectOneRadio> 
-                </p:outputLabel>
+                </p:outputPanel>
             </f:facet>
 
             <p:column headerText="Rut">  
