--- a/HospitalApp-web/src/main/webapp/VisualizarProfesional.xhtml
+++ b/HospitalApp-web/src/main/webapp/VisualizarProfesional.xhtml
@@ -5,23 +5,24 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://java.sun.com/jsf/core">
     <h:form id="formBuscarProfesional">                    
-        <h:panelGrid columns="3" id="panelCampoProf">
-            <p:outputLabel value="Buscar"></p:outputLabel>
-            <p:inputText value="#{buscarProfesional.buscado}"/>
-            <p:commandButton update="PersonasProf" action="#{buscarProfesional.buscarPersona()}" value="Buscar" icon="ui-icon-search"/>
-        </h:panelGrid>
-
-        <p:selectOneRadio requiredMessage="Campo requerido" required ="true"  id="buscadoProf" value="#{buscarProfesional.opcion}">  
-            <f:selectItem itemLabel="Rut" itemValue="1" />  
-            <f:selectItem itemLabel="Nombre" itemValue="2" />  
-            <f:selectItem itemLabel="Apellido Paterno" itemValue="3" />  
-        </p:selectOneRadio> 
-
-        <p:dataTable id="PersonasProf" paginator="true" paginatorAlwaysVisible="true" rows="10" paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"  
+        <p:growl id="growl" showDetail="true"/>
+        <p:dataTable emptyMessage="No se encontraron elementos que coincidan con la búsqueda" id="PersonasProf" paginator="true" paginatorAlwaysVisible="true" rows="10" paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"  
                      rowsPerPageTemplate="5,10,20"   var="profesional" value="#{buscarProfesional.personasObject}">  
 
-            <f:facet name="header">  
-                Profesionales 
+            <f:facet name="header">
+                <p:outputPanel>
+                    <h:panelGrid columns="3" id="panelCampoProf">
+                        <p:outputLabel value="Buscar"></p:outputLabel>
+                        <p:inputText value="#{buscarProfesional.buscado}"/>
+                        <p:commandButton update="PersonasProf, :formBuscarProfesional:growl" action="#{buscarProfesional.buscarPersona()}" value="Buscar" icon="ui-icon-search"/>
+                    </h:panelGrid>
+
+                    <p:selectOneRadio requiredMessage="Campo requerido" required ="true"  id="buscadoProf" value="#{buscarProfesional.opcion}">  
+                        <f:selectItem itemLabel="Rut" itemValue="1" />  
+                        <f:selectItem itemLabel="Nombre" itemValue="2" />  
+                        <f:selectItem itemLabel="Apellido Paterno" itemValue="3" />  
+                    </p:selectOneRadio> 
+                </p:outputPanel>
             </f:facet>  
 
             <p:column headerText="Rut">  
@@ -107,64 +108,64 @@
                         <p:inputText id="TelefonoContacto" required="true"  requiredMessage="Debe ingresar un numero de contacto" value="#{buscarProfesional.personaSeleccionada.persTelcontacto}">
                             <f:validator validatorId="Validator.PhoneValidator"/>
                         </p:inputText>
-                        
-                    </p:panelGrid>
-                </p:panel>                
-                <p:panel header="Información del Profesional." toggleable="true" toggleSpeed="500" collapsed="true">
-
-                    <p:panelGrid columns="3" >
-                        <p:outputLabel value="Fecha Desde: "/>
-                        <p:inputText id="fechaDesde" readonly="true" required="true" value="#{buscarProfesional.profesionalSeleccionado.profFechadesde}"/>
-                        <p:message for="fechaDesde"/>
-
-                        <p:outputLabel value="Fecha Hasta: " style="font-weight: bold"/>
-                        <p:calendar id="FechaHasta" effect="explode" yearRange="c:c+40" navigator="true" value="#{buscarProfesional.profesionalSeleccionado.profeFechahasta}">                                
-                        </p:calendar>
-                        <p:message for="FechaHasta" display="icon"/>
-
-                        <p:outputLabel value="Grupo Profesional: "/>
-                        <p:selectOneMenu id="Grupo" value="#{buscarProfesional.grupoId}">                            
-                            <f:selectItem itemLabel="#{buscarProfesional.profesionalSeleccionado.idGrupoprofesional.grupoNombre}" itemValue="#{buscarProfesional.profesionalSeleccionado.idGrupoprofesional.idGrupoprofesional}" />
-                            <f:selectItems value="#{listasMB.listaGrupos}" var="group" itemLabel="#{group.grupoNombre}" itemValue="#{group.idGrupoprofesional}" />
-                        </p:selectOneMenu>
-                        <p:message for="Grupo" display="icon"/>
-
-                        <p:outputLabel value="Sub-Especialidad: "/>
-                        <p:selectOneMenu id="SubEsp" value="#{buscarProfesional.subEspecialidadId}">
-                            <f:selectItem itemLabel="#{buscarProfesional.profesionalSeleccionado.idSubespecialidad.subespeNombre}" itemValue="#{buscarProfesional.profesionalSeleccionado.idSubespecialidad.idSubespecialidad}" />
-                            <f:selectItems value="#{listasMB.listaSubespecialidad}" var="sub" itemLabel="#{sub.subespeNombre}" itemValue="#{sub.idSubespecialidad}" />
-                        </p:selectOneMenu>
-                        <p:message for="SubEsp" display="icon"/>
-
-                        <p:outputLabel value="Profesional Encargado: "/>
-                        <p:selectOneMenu id="ProfEn" value="#{buscarProfesional.medicoReferenciaId}">
-                            <f:selectItem itemLabel="#{buscarProfesional.profesionalSeleccionado.proIdProfesional.idPersona.persNombres}" itemValue="#{buscarProfesional.profesionalSeleccionado.proIdProfesional.idPersona.idPersona}" />
-                            <f:selectItems value="#{listasMB.listaProfesionales}" var="prof" itemLabel="#{prof.persNombres} #{prof.persApepaterno}" itemValue="#{prof.idPersona}"/>
-                        </p:selectOneMenu>
-                        <p:message for="ProfEn"/>
-
-                        <p:outputLabel value="Cargo: "/>
-                        <p:selectOneMenu id="Car" value="#{buscarProfesional.cargoId}">
-                            <f:selectItem itemLabel="#{buscarProfesional.profesionalSeleccionado.idCargo.cargoNombre}" itemValue="#{buscarProfesional.profesionalSeleccionado.idCargo.idCargo}" />
-                            <f:selectItems value="#{listasMB.listaCargos}" var="carg" itemLabel="#{carg.cargoNombre}" itemValue="#{carg.idCargo}"/>
-                        </p:selectOneMenu>                        
-                        <p:message for="Car"/>                       
-
-                        <p:outputLabel value="Local: "/>
-                        <p:selectOneMenu id="local" value="#{buscarProfesional.localId}">
-                            <f:selectItem itemLabel="#{buscarProfesional.profesionalSeleccionado.idLocal.localNombre}" itemValue="#{buscarProfesional.profesionalSeleccionado.idLocal.idLocal}" />
-                            <f:selectItems value="#{listasMB.listaLocales}" var="loc" itemLabel="#{loc.localNombre}" itemValue="#{loc.idLocal}"/>
-                        </p:selectOneMenu>                        
-                        <p:message for="local"/> 
-
-                        <h:outputText value="Activo: " />  
-                        <p:selectBooleanCheckbox id = "id1" value="#{buscarProfesional.profesionalSeleccionado.profActivo}"  >                            
-                        </p:selectBooleanCheckbox>
-                        <p:message id="msgMaq" for="id1"  />                       
 
                     </p:panelGrid>
                 </p:panel>
             </p:panelGrid>
+            <p:panel header="Información del Profesional." toggleable="true" toggleSpeed="500" collapsed="true">
+
+                <p:panelGrid columns="3" >
+                    <p:outputLabel value="Fecha Desde: "/>
+                    <p:inputText id="fechaDesde" readonly="true" required="true" value="#{buscarProfesional.profesionalSeleccionado.profFechadesde}"/>
+                    <p:message for="fechaDesde"/>
+
+                    <p:outputLabel value="Fecha Hasta: " style="font-weight: bold"/>
+                    <p:calendar id="FechaHasta" effect="explode" yearRange="c:c+40" navigator="true" value="#{buscarProfesional.profesionalSeleccionado.profeFechahasta}">                                
+                    </p:calendar>
+                    <p:message for="FechaHasta" display="icon"/>
+
+                    <p:outputLabel value="Grupo Profesional: "/>
+                    <p:selectOneMenu id="Grupo" value="#{buscarProfesional.grupoId}">                            
+                        <f:selectItem itemLabel="#{buscarProfesional.profesionalSeleccionado.idGrupoprofesional.grupoNombre}" itemValue="#{buscarProfesional.profesionalSeleccionado.idGrupoprofesional.idGrupoprofesional}" />
+                        <f:selectItems value="#{listasMB.listaGrupos}" var="group" itemLabel="#{group.grupoNombre}" itemValue="#{group.idGrupoprofesional}" />
+                    </p:selectOneMenu>
+                    <p:message for="Grupo" display="icon"/>
+
+                    <p:outputLabel value="Sub-Especialidad: "/>
+                    <p:selectOneMenu id="SubEsp" value="#{buscarProfesional.subEspecialidadId}">
+                        <f:selectItem itemLabel="#{buscarProfesional.profesionalSeleccionado.idSubespecialidad.subespeNombre}" itemValue="#{buscarProfesional.profesionalSeleccionado.idSubespecialidad.idSubespecialidad}" />
+                        <f:selectItems value="#{listasMB.listaSubespecialidad}" var="sub" itemLabel="#{sub.subespeNombre}" itemValue="#{sub.idSubespecialidad}" />
+                    </p:selectOneMenu>
+                    <p:message for="SubEsp" display="icon"/>
+
+                    <p:outputLabel value="Profesional Encargado: "/>
+                    <p:selectOneMenu id="ProfEn" value="#{buscarProfesional.medicoReferenciaId}">
+                        <f:selectItem itemLabel="#{buscarProfesional.profesionalSeleccionado.proIdProfesional.idPersona.persNombres}" itemValue="#{buscarProfesional.profesionalSeleccionado.proIdProfesional.idPersona.idPersona}" />
+                        <f:selectItems value="#{listasMB.listaProfesionales}" var="prof" itemLabel="#{prof.persNombres} #{prof.persApepaterno}" itemValue="#{prof.idPersona}"/>
+                    </p:selectOneMenu>
+                    <p:message for="ProfEn"/>
+
+                    <p:outputLabel value="Cargo: "/>
+                    <p:selectOneMenu id="Car" value="#{buscarProfesional.cargoId}">
+                        <f:selectItem itemLabel="#{buscarProfesional.profesionalSeleccionado.idCargo.cargoNombre}" itemValue="#{buscarProfesional.profesionalSeleccionado.idCargo.idCargo}" />
+                        <f:selectItems value="#{listasMB.listaCargos}" var="carg" itemLabel="#{carg.cargoNombre}" itemValue="#{carg.idCargo}"/>
+                    </p:selectOneMenu>                        
+                    <p:message for="Car"/>                       
+
+                    <p:outputLabel value="Local: "/>
+                    <p:selectOneMenu id="local" value="#{buscarProfesional.localId}">
+                        <f:selectItem itemLabel="#{buscarProfesional.profesionalSeleccionado.idLocal.localNombre}" itemValue="#{buscarProfesional.profesionalSeleccionado.idLocal.idLocal}" />
+                        <f:selectItems value="#{listasMB.listaLocales}" var="loc" itemLabel="#{loc.localNombre}" itemValue="#{loc.idLocal}"/>
+                    </p:selectOneMenu>                        
+                    <p:message for="local"/> 
+
+                    <h:outputText value="Activo: " />  
+                    <p:selectBooleanCheckbox id = "id1" value="#{buscarProfesional.profesionalSeleccionado.profActivo}"  >                            
+                    </p:selectBooleanCheckbox>
+                    <p:message id="msgMaq" for="id1"  />                       
+
+                </p:panelGrid>
+            </p:panel>
             <p:commandButton id="editarPersProf" value="Actualizar Datos" disabled="#{buscarProfesional.activoAux == false}" update="actualizarPersonaProf"  actionListener="#{buscarProfesional.actualizar()}" >
                 <p:confirm  header="Atención" message="¿Está seguro que desea actualizar los datos?" icon="ui-icon-alert" />
             </p:commandButton>
