--- a/HospitalApp-web/src/main/webapp/BuscarPaciente.xhtml
+++ b/HospitalApp-web/src/main/webapp/BuscarPaciente.xhtml
@@ -4,55 +4,63 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://java.sun.com/jsf/core">
-    
+
     <h:form id="buscaPaciente">
-        <p:panelGrid columns="3" id="datosPaciente">
-            <p:outputLabel for="Rut" value="Rut: "/>
-            <p:inputText id="Rut" value="#{busquedaMB.rut}"/>
-            <p:message for="Rut" showDetail="true"/>
-            <p:outputLabel for="Nombres" value="Nombre: "/>
-            <p:inputText id="Nombres" value="#{busquedaMB.nombres}"/>
-            <p:message for="Nombres" showDetail="true"/>
-            <p:outputLabel for="ApePaterno" value="Apellido Paterno: "/>
-            <p:inputText id="ApePaterno" value="#{busquedaMB.apePaterno}"/>
-            <p:message for="ApePaterno" showDetail="true"/>
-            <p:outputLabel for="ApeMaterno" value="Apellido Materno: "/>
-            <p:inputText id="ApeMaterno" value="#{busquedaMB.apeMaterno}"/>
-            <p:message for="ApeMaterno" showDetail="true"/>
-            <p:outputLabel for="NumeroFicha"  value="Numero de Ficha: "/>
-            <p:inputText id="NumeroFicha" value="#{busquedaMB.numeroFicha}"/>
-            <p:message for="NumeroFicha" showDetail="true"/>
-            <p:outputLabel for="Sexo" value="Sexo: "/>
-            <p:selectOneMenu id="Sexo" value="#{busquedaMB.sexo}">
-                <f:selectItem itemLabel="Seleccionar" itemValue="#{0}"/>
-                <f:selectItem itemLabel="Hombre" itemValue="#{1}"/>
-                <f:selectItem itemLabel="Mujer" itemValue="#{2}"/>
-                <f:selectItem itemLabel="Indeterminado" itemValue="#{3}"/>
-                <f:selectItem itemLabel="Desconocido" itemValue="#{4}"/>
-            </p:selectOneMenu>
-            <p:message for="Sexo" showDetail="true"/>
-            <p:outputLabel for="FechaNacimiento" value="Fecha de Nacimiento: "/>
-            <p:calendar effect="explode" navigator="true" yearRange="c-100:c" id="FechaNacimiento" value="#{busquedaMB.fechaNacimiento}"/>
-            <p:message for="FechaNacimiento" showDetail="true"/>
-        </p:panelGrid>
-        <p:commandButton value="Buscar" icon="ui-icon-search" actionListener="#{busquedaMB.buscar}" oncomplete="PF('Resultados').show()" update="buscaPaciente, ResultadosBusqueda"/>
-        
-        <p:dialog id="ResultadosBusqueda" widgetVar="Resultados" header="Resultados de Búsqueda" showEffect="fade" hideEffect="fade">
-            <p:dataTable emptyMessage="No se encontraron elementos que coincidan con la búsqueda" value="#{busquedaMB.listaPersonas}" var="persona">
-                <p:column headerText="Rut">
-                    #{persona.persRut}
-                </p:column>
-                <p:column headerText="Nombres">
-                    #{persona.persNombres}
-                </p:column>
-                <p:column headerText="Apellido Paterno">
-                    #{persona.persApepaterno}
-                </p:column>
-                <p:column headerText="Apellido Materno">
-                    #{persona.persApematerno}
-                </p:column>
-            </p:dataTable>
-        </p:dialog>
+        <div align="center">
+            <p:panelGrid columns="3" id="datosPaciente">
+                <p:outputLabel for="Rut" value="Rut: "/>
+                <p:inputText id="Rut" value="#{busquedaMB.rut}"/>
+                <p:message for="Rut" showDetail="true"/>
+                <p:outputLabel for="Nombres" value="Nombre: "/>
+                <p:inputText id="Nombres" value="#{busquedaMB.nombres}"/>
+                <p:message for="Nombres" showDetail="true"/>
+                <p:outputLabel for="ApePaterno" value="Apellido Paterno: "/>
+                <p:inputText id="ApePaterno" value="#{busquedaMB.apePaterno}"/>
+                <p:message for="ApePaterno" showDetail="true"/>
+                <p:outputLabel for="ApeMaterno" value="Apellido Materno: "/>
+                <p:inputText id="ApeMaterno" value="#{busquedaMB.apeMaterno}"/>
+                <p:message for="ApeMaterno" showDetail="true"/>
+                <p:outputLabel for="NumeroFicha"  value="Numero de Ficha: "/>
+                <p:inputText id="NumeroFicha" value="#{busquedaMB.numeroFicha}"/>
+                <p:message for="NumeroFicha" showDetail="true"/>
+                <p:outputLabel for="Sexo" value="Sexo: "/>
+                <p:selectOneMenu id="Sexo" value="#{busquedaMB.sexo}">
+                    <f:selectItem itemLabel="Seleccionar" itemValue="#{0}"/>
+                    <f:selectItem itemLabel="Hombre" itemValue="#{1}"/>
+                    <f:selectItem itemLabel="Mujer" itemValue="#{2}"/>
+                    <f:selectItem itemLabel="Indeterminado" itemValue="#{3}"/>
+                    <f:selectItem itemLabel="Desconocido" itemValue="#{4}"/>
+                </p:selectOneMenu>
+                <p:message for="Sexo" showDetail="true"/>
+                <p:outputLabel for="FechaNacimiento" value="Fecha de Nacimiento: "/>
+                <p:calendar effect="explode" navigator="true" yearRange="c-100:c" id="FechaNacimiento" value="#{busquedaMB.fechaNacimiento}"/>
+                <p:message for="FechaNacimiento" showDetail="true"/>
+            </p:panelGrid>
+            <p:commandButton value="Buscar" icon="ui-icon-search" actionListener="#{busquedaMB.buscar}" oncomplete="PF('Resultados').show()" update="buscaPaciente, ResultadosBusqueda"/>
+
+            <p:dialog id="ResultadosBusqueda" widgetVar="Resultados" header="Resultados de Búsqueda" showEffect="fade" hideEffect="fade">
+                <p:dataTable emptyMessage="No se encontraron elementos que coincidan con la búsqueda" value="#{busquedaMB.listaPersonas}" var="persona">
+                    <p:column headerText="Rut">
+                        #{persona.persRut}-#{persona.persDv}
+                    </p:column>
+                    <p:column headerText="Nombres">
+                        #{persona.persNombres}
+                    </p:column>
+                    <p:column headerText="Apellido Paterno">
+                        #{persona.persApepaterno}
+                    </p:column>
+                    <p:column headerText="Apellido Materno">
+                        #{persona.persApematerno}
+                    </p:column>
+                    <p:column headerText="Fecha Nacimiento">
+                        #{persona.persFnacimiento}
+                    </p:column>
+                    <p:column headerText="Sexo">
+                        #{persona.idGenero.generoNombre}
+                    </p:column>
+                </p:dataTable>
+            </p:dialog>
+        </div>
     </h:form>
 </html>
 
