--- a/HospitalApp-web/src/main/webapp/BuscarPaciente.xhtml
+++ b/HospitalApp-web/src/main/webapp/BuscarPaciente.xhtml
@@ -9,7 +9,7 @@
         <div align="center">
             <p:panelGrid columns="3" id="datosPaciente">
                 <p:outputLabel for="Rut" value="Rut: "/>
-                <p:inputText id="Rut" value="#{busquedaMB.rut}"/>
+                <p:inputText id="Rut" value="#{busquedaMB.rut}" placeholder="Rut sin dv"/>
                 <p:message for="Rut" showDetail="true"/>
                 <p:outputLabel for="Nombres" value="Nombre: "/>
                 <p:inputText id="Nombres" value="#{busquedaMB.nombres}"/>
