--- a/HospitalApp-web/src/main/webapp/VisualizarProfesional.xhtml
+++ b/HospitalApp-web/src/main/webapp/VisualizarProfesional.xhtml
@@ -60,7 +60,7 @@
 
     </h:form>
 
-    <p:dialog maximizable="true" minimizable="true" id="dialogEditarProf" header="Editar Persona" widgetVar="dialogEditarPersonaProf" height="600" width="950">  
+    <p:dialog maximizable="true" minimizable="true" id="dialogEditarProf" header="Editar Profesional" widgetVar="dialogEditarPersonaProf" height="600" width="950">  
         <h:form id="actualizarPersonaProf">
             <p:growl id="growl" showDetail="true" sticky="true" />
             <p:panelGrid columns="2" id="panelEditarProf" >
