--- a/HospitalApp-web/src/main/webapp/index.xhtml
+++ b/HospitalApp-web/src/main/webapp/index.xhtml
@@ -59,7 +59,7 @@
                   minimizable="true" height="540" width="800">
             <ui:include src="VisualizarProfesional.xhtml"/>
         </p:dialog>
-        <p:dialog id="buscarPaciente" maximizable="true" header="Profesionales" widgetVar="searchPac" showEffect="fade" hideEffect="fade" closeOnEscape="true" 
+        <p:dialog id="buscarPaciente" maximizable="true" header="Buscar Pacientes" widgetVar="searchPac" showEffect="fade" hideEffect="fade" closeOnEscape="true" 
                   minimizable="true">
             <ui:include src="BuscarPaciente.xhtml"/>
         </p:dialog>
