--- a/HospitalApp-web/src/main/webapp/BuscarPaciente.xhtml
+++ b/HospitalApp-web/src/main/webapp/BuscarPaciente.xhtml
@@ -9,16 +9,20 @@
         <div align="center">
             <p:panelGrid columns="3" id="datosPaciente">
                 <p:outputLabel for="Rut" value="Rut: "/>
-                <p:inputText id="Rut" value="#{busquedaMB.rut}" placeholder="Rut sin dv"/>
+                <p:autoComplete id="Rut" value="#{busquedaMB.rut}" completeMethod="#{busquedaMB.completarRut}" 
+                                var="rut" itemLabel="#{rut}" itemValue="#{rut}"/>
                 <p:message for="Rut" showDetail="true"/>
                 <p:outputLabel for="Nombres" value="Nombre: "/>
-                <p:inputText id="Nombres" value="#{busquedaMB.nombres}"/>
+                <p:autoComplete id="Nombres" value="#{busquedaMB.nombres}" completeMethod="#{busquedaMB.completarNombre}" 
+                                var="nombre" itemLabel="#{nombre}" itemValue="#{nombre}"/>
                 <p:message for="Nombres" showDetail="true"/>
                 <p:outputLabel for="ApePaterno" value="Apellido Paterno: "/>
-                <p:inputText id="ApePaterno" value="#{busquedaMB.apePaterno}"/>
+                <p:autoComplete id="ApePaterno" value="#{busquedaMB.apePaterno}" completeMethod="#{busquedaMB.completarApePaterno}" 
+                                var="paterno" itemLabel="#{paterno}" itemValue="#{paterno}"/>
                 <p:message for="ApePaterno" showDetail="true"/>
                 <p:outputLabel for="ApeMaterno" value="Apellido Materno: "/>
-                <p:inputText id="ApeMaterno" value="#{busquedaMB.apeMaterno}"/>
+                <p:autoComplete id="ApeMaterno" value="#{busquedaMB.apeMaterno}" completeMethod="#{busquedaMB.completarApeMaterno}" 
+                                var="materno" itemLabel="#{materno}" itemValue="#{materno}"/>
                 <p:message for="ApeMaterno" showDetail="true"/>
                 <p:outputLabel for="NumeroFicha"  value="Numero de Ficha: "/>
                 <p:inputText id="NumeroFicha" value="#{busquedaMB.numeroFicha}"/>
